# osm_to_sandbox

./: .gitignore  README.md  setup.cfg
osm_to_sandbox/: osm_to_sandbox.py
