[metadata]
name = osm_to_sandbox
version = 1.0
author = Ilya Zverev
author_email = ilya@zverev.info
keywords = osm, openstreetmap, sandbox, copy
description = Copy data from OpenStreetMap to its Mapping Sandbox
long_description = file: README.md
long_description_content_type = text/markdown
license = ISC License
license_files = LICENSE.md
url = https://github.com/Zverik/osm_to_sandbox
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: Customer Service
    Operating System :: OS Independent
    License :: OSI Approved :: ISC License (ISCL)
    Programming Language :: Python :: 3 :: Only

[options]
packages = osm_to_sandbox
python_requires = >=3.5
install_requires =
  requests
  lxml

[options.entry_points]
console_scripts =
  osm_to_sandbox = osm_to_sandbox.osm_to_sandbox:main
